# pose-detection1

./: .gitignore  .railwayignore  App.tsx  README.md  app.json  jest.exercise.config.js  jobs.md  metro.config.js  package copy.json  package-lock.json  package.json  private_keys.json  schema.md  skills-lock.json  tsconfig.json
.claude/: settings.local.json
.railway-asi-one-chat/: AGENT_ARCHITECTURE.md  ASI_ONE_DEPLOYMENT.md  SLS_RAW_FEATURES_AND_ERRORS.md  message (1).txt  pyproject.toml  run_asi_one_chat_agent.py  test_agents.py
.railway-asi-one-chat/agents/: asi_one_chat_agent.py  exercise_reporter.py  intake.py  messages.py  orchestrator.py  progress.py  progress_salience.py  reporter.py
.railway-asi-one-chat/db/: models.py  session.py
.railway-asi-one-chat/db/migrations/versions/: 0005_patient_metadata.py  0007_exercise_session_metadata.py  0011_visit_linkage_and_archive.py
.railway-asi-one-chat/routers/: patients.py  reports.py  sessions.py
.railway-asi-one-chat/schemas/: exercise.py  report.py  session.py
.railway-asi-one-chat/tests/: test_session_sync.py  test_voice_metadata.py
.railway-asi-one-chat/utils/: phi_scanner.py  voice_metadata.py
.railway-backend-migration-20260426-021827/: config.py  main.py  pyproject.toml
backend/: .dockerignore  .env  .env.example  AGENT_ARCHITECTURE.md  AGENT_ARCHITECTURE_NOTES.md  AGENT_ARCHITECTURE_REFINEMENT.md  AGENT_DATA_REQUIREMENTS.md  ASI_ONE_AGENT.md  BACKEND.md  Dockerfile  config.py  main.py  pyproject.toml  railway.asi-one.toml  railway.toml  run_agent.py  run_asi_one_chat_agent.py  sentinel_dev.db  (+2 more)
(+233 files in other folders)
